--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
 
     <header>
-      <h1>Rubé's English Learning Blog</h1>
-      <p>Sharing my projects, ideas, and learning journey</p>
+      <h1>Rubén's Blog</h1>
+
     </header>
 
   <div class="container">
